Add AR credit memo allocation command
